# Ebike_Datasets

./: .gitignore  LICENSE  README.md
log/: latest_build
scripts/: all_code.sh  bag_record.sh  sensors.sh  start.sh
src/OrbbecSDK_ROS2-2.4.3/orbbec_camera/config/: my_camera.yaml
src/OrbbecSDK_ROS2-2.4.3/orbbec_camera/launch/: gemini_330_series.launch.py
src/bike_control/: CMakeLists.txt  main.cpp  package.xml
src/bike_control/include/bike_control/: bike_controller.h  bike_model.h  bike_visualizer.h  crc8.h  motor.h  trajectory_generator.h
src/bike_control/launch/: bike_control.launch.py
src/bike_control/src/: bike_controller.cpp  bike_controller_v1.cpp  bike_model.cpp  bike_visualizer.cpp  crc8.cpp  main.cpp  main.cpp.save  main.cpp.save.1  motor.cpp  trajectory_generator.cpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: bringup.launch.py
src/grounddata2gridmap/: CMakeLists.txt  package.xml
src/grounddata2gridmap/src/: pointcloud_to_occupancy_grid_node.cpp
src/integrated_navigation/: CMakeLists.txt  package.xml
src/integrated_navigation/msg/: IntegratedData.msg
src/integrated_navigation/src/: integrated_navigation_node.cpp
src/ros2_ground_segmentation/: CMakeLists.txt  package.xml
src/ros2_ground_segmentation/src/: ground_segmentation_node.cpp  ground_segmentation_node222.cpp  ground_segmentation_nodeposetrack.cpp  ground_segmentation_nodeuse.cpp
src/rslidar_sdk-v1.5.17/config/: config.yaml
src/rslidar_sdk-v1.5.17/launch/: start.py
src/yesense_ros2/yesense_std_ros2/config/: yesense_config.yaml
src/yesense_ros2/yesense_std_ros2/src/: yesense_node.cpp
src/yolov11_pose_tracking/config/: params.yaml
src/yolov11_pose_tracking/yolov11_pose_tracking/: yolov11_pose_track.py
