<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_to_grid</name>
  <version>0.0.1</version>
  <description>Convert point cloud to 2D occupancy grid map</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

