<?xml version="1.0"?>
<package format="3">
  <name>ground_segmentation</name>
  <version>0.0.1</version>
  <description>Point cloud ground segmentation package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>pcl_conversions</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
